--- a/app/src/main/res/layout/content_new_memo.xml
+++ b/app/src/main/res/layout/content_new_memo.xml
@@ -9,23 +9,44 @@
     tools:showIn="@layout/activity_new_memo">
 
     <EditText
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
+        android:id="@+id/newtitle"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:ems="10"
+        android:layout_marginTop="16dp"
+        android:ems="100"
         android:inputType="textPersonName"
-        android:text="Title"
+        android:text="Name"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/newImage" />
 
     <EditText
-        android:id="@+id/editText2"
-        android:layout_width="wrap_content"
+        android:id="@+id/newdesc"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:ems="10"
+        android:layout_marginTop="10dp"
+        android:ems="100"
         android:inputType="textPersonName"
         android:text="dqwdqd"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/newtitle" />
+
+    <ImageView
+        android:id="@+id/newImage"
+        android:layout_width="255dp"
+        android:layout_height="217dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        app:layout_constraintBottom_toTopOf="@+id/newtitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/jellybean" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/newImage" />
 </androidx.constraintlayout.widget.ConstraintLayout>
