--- a/app/src/main/res/layout/notepad_item.xml
+++ b/app/src/main/res/layout/notepad_item.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_weight="1">
 
     <TextView
         android:id="@+id/textView"
@@ -28,7 +29,6 @@
         android:maxLines="3"
         android:scrollHorizontally="false"
         android:singleLine="false"
-        android:text="blahblahblahbh"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@id/textView" />
@@ -44,4 +44,5 @@
         app:layout_constraintEnd_toStartOf="@+id/textView3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
