connect Add db에 인덱스 넣기 전 커밋

--- a/app/src/main/res/menu/menu_detail.xml
+++ b/app/src/main/res/menu/menu_detail.xml
@@ -11,4 +11,13 @@
         android:title="edit"
         android:visible="true"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/complete_memo"
+        android:enabled="true"
+        android:icon="@mipmap/ic_launcher_round"
+        android:orderInCategory="200"
+        android:title="edit"
+        android:visible="true"
+        app:showAsAction="always" />
 </menu>
