--- a/app/src/main/res/layout/content_new_memo.xml
+++ b/app/src/main/res/layout/content_new_memo.xml
@@ -36,6 +36,7 @@
         android:layout_height="217dp"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
+        android:adjustViewBounds="true"
         app:layout_constraintBottom_toTopOf="@+id/newtitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
