--- a/app/src/main/res/menu/menu_detail.xml
+++ b/app/src/main/res/menu/menu_detail.xml
@@ -4,20 +4,29 @@
     tools:context="com.example.hyunndy_notepad.DetailMemoActvity">
 
     <item
-        android:id="@+id/add_memo"
+        android:id="@+id/edit_memo"
         android:enabled="true"
-        android:icon="@drawable/search_icon"
+        android:icon="@android:drawable/ic_menu_edit"
         android:orderInCategory="100"
         android:title="edit"
         android:visible="true"
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/complete_memo"
+        android:id="@+id/save_memo"
         android:enabled="true"
-        android:icon="@mipmap/ic_launcher_round"
+        android:icon="@android:drawable/ic_menu_save"
         android:orderInCategory="200"
-        android:title="edit"
+        android:title="save_memo"
+        android:visible="true"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/delete_memo"
+        android:enabled="true"
+        android:icon="@android:drawable/ic_menu_delete"
+        android:orderInCategory="300"
+        android:title="delete"
         android:visible="true"
         app:showAsAction="always" />
 </menu>
