--- a/app/src/main/res/layout/content_new_memo.xml
+++ b/app/src/main/res/layout/content_new_memo.xml
@@ -8,46 +8,70 @@
     tools:context=".NewMemoActivity"
     tools:showIn="@layout/activity_new_memo">
 
-    <EditText
-        android:id="@+id/newtitle"
+    <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:ems="100"
-        android:inputType="textPersonName"
-        android:text="Name"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/newImage" />
-
-    <EditText
-        android:id="@+id/newdesc"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:ems="100"
-        android:inputType="textPersonName"
-        android:text="dqwdqd"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/newtitle" />
-
-    <ImageView
-        android:id="@+id/newImage"
-        android:layout_width="255dp"
-        android:layout_height="217dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"
-        android:adjustViewBounds="true"
-        app:layout_constraintBottom_toTopOf="@+id/newtitle"
+        android:layout_height="0dp"
+        android:fillViewport="false"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/jellybean" />
+        app:layout_constraintVertical_bias="1.0">
+
+        <LinearLayout
+            android:id="@+id/linear_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:addStatesFromChildren="false"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/newtitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="10dp"
+                android:ems="100"
+                android:inputType="textPersonName"
+                android:text="Name" />
+
+            <EditText
+                android:id="@+id/newdesc"
+                android:layout_width="222dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="10dp"
+                android:ems="100"
+                android:inputType="textPersonName"
+                android:text="dqwdqd" />
+
+            <ImageView
+                android:id="@+id/newImage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|center_horizontal|center_vertical"
+                android:layout_marginStart="50dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginEnd="50dp"
+                android:adjustViewBounds="true"
+                app:srcCompat="@drawable/jellybean" />
+
+        </LinearLayout>
+    </ScrollView>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/addImageBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/newImage" />
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="30dp"
+        android:padding="0dp"
+        android:text="ADD_IMAGE"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
