--- a/app/src/main/res/layout/content_detail_memo_actvity.xml
+++ b/app/src/main/res/layout/content_detail_memo_actvity.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:id="@+id/linear_image"
+            android:id="@+id/linear_image_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:addStatesFromChildren="false"
@@ -88,17 +88,5 @@
 
         </LinearLayout>
     </ScrollView>
-
-    <Button
-        android:id="@+id/addImageBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="30dp"
-        android:padding="0dp"
-        android:text="ADD_IMAGE"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
