--- a/app/src/main/res/layout/content_new_memo.xml
+++ b/app/src/main/res/layout/content_new_memo.xml
@@ -18,7 +18,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintVertical_bias="0.0">
 
         <LinearLayout
             android:id="@+id/linear_image"
@@ -34,9 +34,12 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="10dp"
+                android:layout_weight="1"
                 android:ems="100"
-                android:inputType="textPersonName"
-                android:text="Name" />
+                android:imeOptions="actionNext"
+                android:inputType="textMultiLine"
+                android:scrollHorizontally="false"
+                android:text="메모의 제목을 입력해주세요." />
 
             <EditText
                 android:id="@+id/newdesc"
@@ -45,9 +48,12 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="10dp"
+                android:layout_weight="1"
                 android:ems="100"
+                android:imeOptions="actionDone"
                 android:inputType="textPersonName"
-                android:text="dqwdqd" />
+                android:scrollHorizontally="false"
+                android:text="내용을 입력해주세요." />
 
             <ImageView
                 android:id="@+id/newImage"
@@ -63,14 +69,41 @@
         </LinearLayout>
     </ScrollView>
 
+    <EditText
+        android:id="@+id/url_new"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="150dp"
+        android:ems="10"
+        android:imeOptions="actionDone"
+        android:inputType="textUri"
+        android:text="URL 입력 후 완료를 눌러주세요."
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <Button
         android:id="@+id/addImageBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="80dp"
         android:padding="0dp"
-        android:text="ADD_IMAGE"
+        android:text="ADD"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/deleteImgBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="20dp"
+        android:padding="0dp"
+        android:text="DELETE"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
