--- a/app/src/main/res/layout/content_detail_memo_actvity.xml
+++ b/app/src/main/res/layout/content_detail_memo_actvity.xml
@@ -33,9 +33,10 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="10dp"
+                android:layout_weight="1"
                 android:ems="100"
                 android:scrollHorizontally="false"
-                android:text="제목두비두밥"
+                android:text="메모의 제목을 입력해주세요."
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
             <EditText
@@ -47,6 +48,7 @@
                 android:layout_marginEnd="10dp"
                 android:ems="100"
                 android:inputType="textMultiLine"
+                android:imeOptions="actionNext"
                 android:scrollHorizontally="false"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:visibility="gone" />
@@ -60,7 +62,8 @@
                 android:layout_marginEnd="10dp"
                 android:ems="100"
                 android:scrollHorizontally="false"
-                android:text="본문 두비두밥" />
+                android:text="내용을 입력해주세요."
+                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
             <EditText
                 android:id="@+id/detail_editdesc"
@@ -70,23 +73,76 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="10dp"
                 android:ems="100"
+                android:imeOptions="actionDone"
                 android:inputType="textMultiLine"
                 android:scrollHorizontally="false"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:visibility="gone" />
 
-            <ImageView
-                android:id="@+id/detail_image"
+            <RelativeLayout
+                android:id="@+id/detail_edit_Image"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center|center_horizontal|center_vertical"
-                android:layout_marginStart="50dp"
-                android:layout_marginTop="25dp"
-                android:layout_marginEnd="50dp"
-                android:adjustViewBounds="true"
-                app:srcCompat="@drawable/jellybean" />
+                android:layout_height="match_parent"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="30dp"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:visibility="gone">
 
+                <Button
+                    android:id="@+id/addImageBtn_detail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="50dp"
+                    android:padding="0dp"
+                    android:text="ADD" />
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="false"
+                    android:layout_alignParentTop="false"
+                    android:layout_alignParentEnd="false"
+                    android:layout_alignParentRight="false"
+                    android:layout_marginStart="175dp"
+                    android:gravity="center"
+                    android:text="이미지"
+                    android:textAlignment="center"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+                <Button
+                    android:id="@+id/deleteImgBtn_detail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerInParent="true"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginEnd="50dp"
+                    android:layout_marginBottom="0dp"
+                    android:padding="0dp"
+                    android:text="DELETE" />
+            </RelativeLayout>
         </LinearLayout>
     </ScrollView>
+
+    <EditText
+        android:id="@+id/url_new_detail"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="150dp"
+        android:ems="10"
+        android:imeOptions="actionDone"
+        android:inputType="textUri"
+        android:text="URL 입력 후 완료를 눌러주세요."
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
