--- a/app/src/main/res/menu/menu_new.xml
+++ b/app/src/main/res/menu/menu_new.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.hyunndy_notepad.NewMemoActivity">
+    tools:context="com.example.hyunndyNotepad.NewMemoActivity">
 
     <item
         android:id="@+id/save_memo_new"
